[package]
name = "skiplist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use_std", "failpoints"]
use_std = ["crossbeam-epoch/use_std"]
nightly = ["crossbeam-epoch/nightly"]
failpoints = ["fail/failpoints"]

[dependencies]
crossbeam-epoch = {version = "0.4.1", default-features = false}
crossbeam-utils = {version = "0.3.0", default-features = false}
scopeguard = {version = "0.3.0", default-features = false}
bytes = "1"
rand = "0.8.4"
slog = "2.2"
fail = "0.5"

[dev-dependencies]
loom = "0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dependencies.tikv-jemalloc-ctl]
version = "0.5.0"