[package]
name = "skiplist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
scopeguard = {version = "1.1.0", default-features = false}
bytes = "1"
rand = "0.8.4"
slog = "2.2"
fail = "0.5"

[dev-dependencies]
loom = "0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dependencies.tikv-jemalloc-ctl]
version = "0.5.0"